# strong_ptr

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CMakeLists.txt  README.md  clangd-wrapper.py  clangd_wrapper.py  compile_commands_clangd_resolver.py  conanfile.py  cspell.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  take.yml  update_name.yml
docs/: doxygen.conf
include/strong_ptr/: pointers.hpp
modules/: strong_ptr.cppm
test_package/: CMakeLists.txt  conanfile.py  main.cpp
tests/: enable_from_this.test.cpp  main.test.cpp  mixins.test.cpp  monotonic_allocator.test.cpp  optional_ptr.test.cpp  pointers.test.cpp  strong_ptr.test.cpp  unit_test.cppm  util.cppm  weak_ptr.test.cpp
